--- a/main.css
+++ b/main.css
@@ -4,3 +4,9 @@ body {
 h1 {
     text-align: center;
 }
+img {
+    border: 5px solid #000;
+    width: 200px; height: 200px;
+    margin-left: 50px;
+    margin-top: 50px;
+}
