--- a/main.css
+++ b/main.css
@@ -4,16 +4,19 @@ body {
 h1 {
     text-align: center;
 }
-img {
-    border: 5px solid #000;
-    width: 200px; height: 200px;
-    margin-left: 50px;
-    margin-top: 50px;
-}
 .about {
     display: flex;
 }
 
-.about .about-content {
-    padding: 20px;
+.about > .about-text > h2 {
+    margin: 0;
+}
+.about > .about-img {
+    height: 250px;
+    width: 30%;
+}
+
+.about > .about-img > img {
+    width: 100%;
+    height: 100%;
 }
