--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
-h2{
+body {
+    font-family: Arial;
+}
+
+h2 {
     font-size: 28px;
 }
 
-h1{
+h1 {
     font-size: 36px;
 }
 
-span{
+span {
     color:grey;
 }
 
-img{
+img {
     width: 150px;
     height: 150px;
 }
