--- a/style.css
+++ b/style.css
@@ -1,25 +1,40 @@
 body {
-    font-family: Arial;
+	font-family: Arial;
+	background-color: aliceblue;
+	padding: 40px 0px;
 }
 
 h2 {
-    font-size: 28px;
+	font-size: 28px;
 }
 
 h1 {
-    font-size: 36px;
+	font-size: 36px;
 }
 
 span {
-    color: gray;
+	color: gray;
 }
 
 img {
-    width: 150px;
-    height: 150px;
+	width: 150px;
+	height: 150px;
 }
 
 section,
 header {
-    padding:10px 60px 20px 60px;
+	padding: 10px 60px 20px 60px;
+	background-color: white;
+	width: 960px;
+	margin: 0 auto;
+}
+
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+header ul {
+	list-style: none;
 }
